re-added fonts and separated files

--- a/index.html
+++ b/index.html
@@ -3,49 +3,11 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-
-  <title>Title</title>
-  <meta name="description" content="The HTML5 Herald">
-  <meta name="author" content="SitePoint">
+  <title>Timesheet</title>
   <script type="text/javascript" src="js/angular.min.js"></script>
-
-  <!-- load bootstrap -->
   <link rel="stylesheet" href="css/bootstrap.min.css" />
-
+  <link rel="stylesheet" href="css/timesheet.css" />
   <style>
-    #spinner {
-      background-color: rgba(0, 0, 0, 0.2);
-      position:absolute; top:0; left:0;
-      width: 100%; height: 100%;
-      z-index: 1000;
-    }
-    #spinner img {
-        position:absolute;
-        left: calc(50% - 64px);
-        top:calc(50% - 64px);
-    }
-    #thanksMessage {
-      text-align:center;
-    }
-
-    #thanksMessage img {
-      max-width: 40%;
-      padding-bottom: 15px;
-    }
-
-    #thanksMessage p {
-      line-height: 200%;
-    }
-
-    /*Minimal adjustments to bootstrap theme*/
-    .btn-option {
-      font-size: 9pt;
-    }
-    .navbar h1{
-      color:#999999;
-      text-align:center;
-    }
-
   </style>
 
 </head>
@@ -136,74 +98,7 @@
 </div><!-- col-sm-8 -->
 </div><!-- /container -->
 
-<script type="text/javascript">
-
-var validationApp = angular.module('validationApp', []);
-
-validationApp.controller('mainController', function($scope,$timeout) {
-
-$scope.time = {
-    start: new Date(1970, 0, 1, 8, 00, 0),
-    end: new Date(1970, 0, 1, 17, 00, 0)
-};
-
-$scope.time.change = function ($log) {
-  var timeDiff = $scope.time.end - $scope.time.start || 0;
-  if (timeDiff > 0) {
-    var minutes = timeDiff/ (1000 * 60);
-    $scope.time.minutes = minutes % 60;
-    $scope.time.hours = minutes / 60 | 0;
-    $scope.userForm.timeStart.$setValidity("default", true);
-  } else {
-    $scope.time.minutes = 0
-    $scope.time.hours = 0;
-    $scope.userForm.timeStart.$setValidity("default", false);
-  }
-
-};
-
-$scope.submitForm = function(isValid, isPristine) {
-  if (isValid && !isPristine) {
-    $scope.spinnerShow = true;
-
-    // This is just a stub for an ajax request. We would
-    // pass all the models (email, time, message and work)
-    $timeout(reqDone, 1000);
-    function reqDone() {
-        $scope.spinnerShow = false;
-        $scope.showThanks();
-    }
-  }
-};
-
-$scope.resetForm = function() {
-  $scope.email = ""
-  $scope.time = {
-    start: new Date(1970, 0, 1, 8, 00, 0),
-    end: new Date(1970, 0, 1, 17, 00, 0)};
-  $scope.message = angular.copy($scope.master);
-  $scope.work = angular.copy($scope.master);
-  $scope.userForm.$setPristine();
-  $scope.showForm();
-};
-
-
-$scope.showForm = function() {
-  $scope.navbarName = "Submit Timesheet"
-  $scope.timesheetForm = "";
-  $scope.thanksMessage = "hidden";
-}
-
-$scope.showThanks = function(){
-  $scope.navbarName = "Timesheet Submitted"
-  $scope.timesheetForm = "hidden";
-  $scope.thanksMessage = "";
-}
-$scope.showForm();
-});
-
-</script>
-
+<script type="text/javascript" src="js/timesheet.js"></script>
 
 </body>
 </html>
