--- a/index.html
+++ b/index.html
@@ -12,93 +12,86 @@
 
 </head>
 
-
 <body ng-app="validationApp" ng-controller="mainController">
 
+  <!-- Our Spinner Animation -->
   <div id="spinner" ng-show="spinnerShow" class="ng-hide" >
     <img src="img/spinner.gif" />
   </div>
 
+  <!-- The Navbar -->
+  <nav class="navbar navbar-inverse navbar-static-top">
+    <h1>{{navbarName}}</h1>
+  </nav>
 
-<nav class="navbar navbar-inverse navbar-static-top">
-  <h1>{{navbarName}}</h1>
-</nav>
+  <!-- Main Content -->
+  <div class="container">
 
-<div class="container">
+    <div class="col-sm-8 col-sm-offset-2">
 
-
-
-<div class="col-sm-8 col-sm-offset-2">
-
-    <!-- FORM -->
-    <form name="userForm" ng-submit="submitForm(userForm.$valid, userForm.$pristine)" class="form-group has-feedback" ng-class="timesheetForm" novalidate>
+      <!-- FORM -->
+      <form name="userForm" ng-submit="submitForm(userForm.$valid, userForm.$pristine)" class="form-group has-feedback" ng-class="timesheetForm" novalidate>
         <!-- EMAIL -->
         <div class="form-group" ng-class="{ 'has-error' : userForm.email.$invalid && !userForm.email.$pristine }">
           <input placeholder="Email: artist@gener8.com" type="email" name="email" class="form-control" ng-model="email" required>
-          <span ng-show="userForm.email.$invalid && !userForm.email.$pristine" class="glyphicon glyphicon-remove form-control-feedback" aria-hidden="true"></span>
+          <span ng-show="userForm.email.$invalid && !userForm.email.$pristine" class="glyphicon glyphicon-remove form-control-feedback"></span>
         </div>
         <!-- TIME -->
         <div class="form-group" ng-class="{ 'has-error has-feedback' : userForm.timeStart.$invalid && !userForm.time.$pristine }">
-
           <div class="input-group">
             <span class="input-group-addon">Start</span>
-            <input id="timeStart" ng-model="time.start" type="time" placeholder="HH:mm" min="08:00:00" max="24:00:00" name="timeStart" ng-change="time.change()" required >
-
+            <input id="timeStart" ng-model="time.start" type="time" placeholder="HH:mm" min="00:00:00" max="24:00:00" name="timeStart" ng-change="time.change()" required >
             <span class="input-group-addon">End</span>
             <input id="timeEnd" ng-model="time.end" type="time" placeholder="HH:mm" min="00:00" max="24:00" name="timeEnd" ng-change="time.change()" required >
           </div>
           <p>Hours: {{time.hours}} Minutes: {{time.minutes}}</p>
           <p ng-show="userForm.timeStart.$invalid && !userForm.timeStart.$pristine" class="help-block">Enter a valid time.</p>
-          <span ng-show="userForm.timeStart.$invalid && !userForm.timeStart.$pristine" class="glyphicon glyphicon-remove form-control-feedback" aria-hidden="true"></span>
-      </div>
-
-      <!-- MESSAGE -->
-      <div class="form-group">
+          <span ng-show="userForm.timeStart.$invalid && !userForm.timeStart.$pristine" class="glyphicon glyphicon-remove form-control-feedback"></span>
+        </div>
+        <!-- MESSAGE -->
+        <div class="form-group">
           <textarea id="message" placeholder="Message(optional):" class="form-control" ng-model="message" rows="3"></textarea>
+        </div>
+        <!-- TYPE OF WORK -->
+        <div class="form-group">
+          <input type="hidden" name="workType"  ng-model="work.type" value={{work}} >
+
+          <div class="btn-group-vertical btn-block" role="group">
+            <button type="button" class="btn btn-default btn-lg btn-option" ng-click="work=1">Time working on visual effects
+              <span ng-show="work==1" class="glyphicon glyphicon-ok form-control-feedback"></span>
+            </button>
+            <button type="button" class="btn btn-default btn-lg btn-option" ng-click="work=2">Time spent reviewing the work of a junior artist
+            <span ng-show="work==2" class="glyphicon glyphicon-ok form-control-feedback"></span>
+            </button>
+          </div>
+        </div>
+        <!-- CLEAR AND SUBMITT BUTTONS -->
+        <div class="form-group">
+          <div class="btn-group btn-group-justified" role="group">
+            <div class="btn-group" role="group">
+              <button class="btn" ng-click="resetForm()" ng-disabled="userForm.$pristine">Clear</button>
+            </div>
+            <div class="btn-group" role="group">
+              <button type="submit" class="btn btn-primary"
+              ng-click="submitForm()" ng-disabled="userForm.$invalid || userForm.$pristine">Next</button>
+            </div>
+          </div>
+        </div>
+      </form>
+
+      <!-- THANK YOU MESSAGE -->
+      <div ng-class="thanksMessage" id="thanksMessage">
+        <img src="img/checkmark.png"></img>
+        <p>Thank you {{email}}</p>
+        <p>You have logged {{time.hours}}h and {{time.minutes}}m of work today.</p>
+        <button class="btn btn-primary btn-block" ng-click="resetForm()">Start Again</button>
       </div>
 
-      <!-- TYPE OF WORK -->
-      <div class="form-group">
-      <input type="hidden" name="workType"  ng-model="work.type" value={{work}} >
+    </div><!-- col-sm-8 -->
 
-      <div class="btn-group-vertical btn-block" role="group">
-        <button type="button" class="btn btn-default btn-lg btn-option" ng-click="work=1">Time working on visual effects
-        <span ng-show="work==1" class="glyphicon glyphicon-ok form-control-feedback" aria-hidden="true"></span>
-        </button>
-        <button type="button" class="btn btn-default btn-lg btn-option" ng-click="work=2">Time spent reviewing the work of a junior artist
-        <span ng-show="work==2" class="glyphicon glyphicon-ok form-control-feedback" aria-hidden="true"></span>
-        </button>
-     </div>
-   </div>
+  </div><!-- /container -->
 
-   <!-- CLEAR AND SUBMITT BUTTONS -->
-   <div class="form-group">
-
-   <div class="btn-group btn-group-justified" role="group" aria-label="...">
-     <div class="btn-group" role="group">
-       <button class="btn" ng-click="resetForm()" ng-disabled="userForm.$pristine">Clear</button>
-    </div>
-    <div class="btn-group" role="group">
-      <button type="submit" class="btn btn-primary"
-    ng-click="submitForm()" ng-disabled="userForm.$invalid || userForm.$pristine">Next</button>
-    </div>
-  </div>
-</div>
-  </form>
-
-  <!-- THANK YOU MESSAGE -->
-  <div ng-class="thanksMessage" id="thanksMessage">
-    <img src="img/checkmark.png"></img>
-    <p>Thank you {{email}}</p>
-    <p>You have logged {{time.hours}}h and {{time.minutes}}m of work today.</p>
-    <button class="btn btn-primary btn-block" ng-click="resetForm()">Start Again</button>
-  </div>
-
-
-</div><!-- col-sm-8 -->
-</div><!-- /container -->
-
-<script type="text/javascript" src="js/timesheet.js"></script>
+  <script type="text/javascript" src="js/timesheet.js"></script>
 
 </body>
 </html>
